add beta full description object update search view

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,3 +25,11 @@ hr{
 .content{
   border-right: 1px solid black;
 }
+.square:hover{
+  box-shadow: 0 0 10px red;
+}
+.square div{
+  border: 1px solid black;
+  padding: 3px;
+  overflow: hidden;
+}
