--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,9 +2,13 @@
 
 .footer{
   background: #f0f0f0;
+  height: 68px;
   padding: 10px;
   color: #000;
-
+  margin-top: 30px;
+}
+.wrapCon{
+  min-height: calc(100% - 98px);
 }
 
 html, body {
@@ -15,15 +19,28 @@ html, body {
 .sub{
   font-size: 0.6em;
 }
-
+h3{
+  margin: 0px;
+}
 hr{
   padding: 0px;
   margin-top: 8px;
   margin-bottom: 8px;
 }
-
+.hline .firstLine{
+  border-bottom: 1px ridge gray;
+  padding-bottom: 3px;
+}
+.fontStatic{
+  font-size: 14px;
+  color: gray;
+}
+.fontVariable{
+  font-size: 14px;
+  font-weight: bold;
+}
 .content{
-  border-right: 1px solid black;
+  border-left: 1px solid black;
 }
 .square:hover{
   box-shadow: 0 0 10px red;
@@ -32,5 +49,14 @@ hr{
   border: 1px solid black;
   padding: 3px;
   overflow: hidden;
+}
+.tableCell div div {
+  border: 1px solid black;
+  padding: 3px;
+  overflow: hidden;
+  text-align: center;
+}
+.tableCell .row{
+  width: 100%;
 }
 
