--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -67,3 +67,24 @@ hr{
 Input.widthInput{
   width: 150px;
 }
+.sticky {
+  position: absolute;
+  position: sticky;
+  top: 90px;
+  right: 0;
+  float: right;
+  background: #cccccc;
+  color: black;
+  width: 100%;
+  z-index: 100;
+}
+
+.bggg {
+  background: #cccccc;
+}
+
+.squareMain div{
+  border: 1px solid black;
+  padding: 3px;
+  overflow: hidden;
+}
